Added gauge and user session data config, storage, and data-structure.
Signed-off-by: JoarEliasson <joar.eliasson@gmail.com>